K8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 900001851672.dkr.ecr.ap-south-1.amazonaws.com/my-backend:latest
        ports:
        - containerPort: 3000
