K8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 900001851672.dkr.ecr.ap-south-1.amazonaws.com/my-frontend:latest
        ports:
        - containerPort: 80
